--- a/views/contacts.html
+++ b/views/contacts.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form method="POST" action="/contacts">
+<form method="POST" action="/contacts" style="margin-bottom:15px;" class="form-group">
   <label>First Name</label>
     <input type="text" name="firstName" />
   <label>Last Name</label>
@@ -10,16 +10,17 @@
   <label>Company</label>
     <input type="text" name="company" />
   <label>Phone Number</label>
-    <input type="number" name="number" />
+    <input type="tel" name="number" />
   <button class="btn btn-outline-primary">Add Contact</button>
 </form>
+
 <ul class="list-group">
   {% for contact in contacts %}
-    <form method="POST" action="/contacts/{{contact.id}}?_method=DELETE" class="form-group">
+    <form method="GET" action="/contacts/{{contact.id}}/edit" class="form-group">
       <li class="list-group-item">
-        <a href="/contacts/{{contact.id}}">{{contact.firstName}} {{contact.lastName}}</a>
+        <a href="/contacts/{{contact.id}}"><strong>{{contact.firstName}} {{contact.lastName}}</strong></a>
         &nbsp;&nbsp;
-        <button class="btn btn-outline-danger">Delete</button>
+        <button class="btn btn-outline-success">Edit</button>
         &nbsp;&nbsp;
       </li>
     </form>
