--- a/views/edit.html
+++ b/views/edit.html
@@ -9,14 +9,17 @@
   <h5>Company: {{contact.company}}</h5>
     <input type="text" name="company" placeholder="{{contact.company}}">
   <h5>Phone Number: {{contact.number}}</h5>
-    <input type="number" name="number" placeholder="{{contact.number}}">
+    <input type="tel" name="number" placeholder="{{contact.number}}">
   <br><br>
     <button class="btn btn-outline-success">Update</button>
 </form>
 
+<form method="POST" action="/contacts/{{contact.id}}?_method=DELETE" class="form-group">
+  <button class="btn btn-outline-danger">Delete</button>
+</form>
 <br>
 
-<a href="/contacts/{{contact.id}}"><button class="btn btn-outline-secondary">Cancel</button></a>
+<a href="/contacts"><button class="btn btn-outline-secondary">Cancel</button></a>
 <br><br>
 <p><a href="/contacts">&laquo; Back to all contacts</a></p>
 
