--- a/views/contacts.html
+++ b/views/contacts.html
@@ -11,6 +11,8 @@
     <input type="text" name="company" />
   <label>Phone Number</label>
     <input type="tel" name="number" />
+  <label>Email</label>
+    <input type="text" name="email" />
   <button class="btn btn-outline-primary">Add Contact</button>
 </form>
 
