--- a/views/contact.html
+++ b/views/contact.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 
-<h2>Name: {{contact.firstName}} {{contact.lastName}}</h2>
-<h5>Company: {{contact.company}}</h5>
-<h5>Phone Number: {{contact.number}}</h5>
+<h2>{{contact.fullName}}</h2>
+<h4>{{contact.company}}</h4>
+<h5>{{ contact.email }}</h5>
+<h5>{{contact.formattedPhone}}</h5>
 
 
 <form method="GET" action="/contacts/{{contact.id}}/edit" class="form-group">
