--- a/views/edit.html
+++ b/views/edit.html
@@ -3,24 +3,43 @@
 {% block content %}
 
 <form method="POST" action="/contacts/{{contact.id}}/edit?_method=PATCH" class="form-group">
-  <h2>Name: {{contact.firstName}} {{contact.lastName}}</h2>
-    <input type="text" name="firstName" placeholder="{{contact.firstName}}">
-    <input type="text" name="lastName" placeholder="{{contact.lastName}}">
-  <h5>Company: {{contact.company}}</h5>
-    <input type="text" name="company" placeholder="{{contact.company}}">
-  <h5>Phone Number: {{contact.number}}</h5>
-    <input type="tel" name="number" placeholder="{{contact.number}}">
-  <br><br>
-    <button class="btn btn-outline-success">Update</button>
+    <div class="form-row">
+      <div class="form-group col-md-4">
+        <h5>First Name</h5>
+        <input type="text" name="firstName" class="form-control" value="{{contact.firstName}}">
+      </div>
+      <div class="form-group col-md-5">
+        <h5>Last Name</h5>
+        <input type="text" name="lastName" class="form-control" value="{{contact.lastName}}">
+      </div>
+      <div class="form-group col-md-3">
+        <h5>Phone Number:</h5>
+        <input type="tel" name="number" class="form-control" value="{{contact.number}}">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-4">
+        <h5>Company</h5>
+        <input type="text" name="company" class="form-control" value="{{contact.company}}">
+      </div>
+      <div class="form-group col-md-4">
+        <h5>Email</h5>
+        <input type="text" name="email" class="form-control" value="{{contact.email}}">
+      </div>
+    </div>
+    <button style="margin:10px 0 0;" class="btn btn-outline-success">Update</button>
 </form>
 
-<form method="POST" action="/contacts/{{contact.id}}?_method=DELETE" class="form-group">
-  <button class="btn btn-outline-danger">Delete</button>
-</form>
-<br>
+<div class="flex" style="padding:20px 0px">
+  <a href="/contacts/{{contact.id}}" style="margin-right:20px;">
+    <button class="btn btn-outline-secondary">Cancel</button>
+  </a>
+  <form method="POST" action="/contacts/{{contact.id}}?_method=DELETE" class="form-group">
+    <button class="btn btn-outline-danger">Delete</button>
+  </form>
 
-<a href="/contacts"><button class="btn btn-outline-secondary">Cancel</button></a>
-<br><br>
+</div>
+
 <p><a href="/contacts">&laquo; Back to all contacts</a></p>
 
 {% endblock %}
