--- a/views/layout.html
+++ b/views/layout.html
@@ -6,6 +6,7 @@
   <title>{{ title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="/vendor/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="/vendor/style.css" />
   <!-- <script src="main.js"></script> -->
 </head>
 <body>
