--- a/views/edit.html
+++ b/views/edit.html
@@ -30,7 +30,7 @@
     <button style="margin:10px 0 0;" class="btn btn-outline-success">Update</button>
 </form>
 
-<div class="flex" style="padding:20px 0px">
+<div class="flex" style="padding:20px 0">
   <a href="/contacts/{{contact.id}}" style="margin-right:20px;">
     <button class="btn btn-outline-secondary">Cancel</button>
   </a>
