--- a/views/contacts.html
+++ b/views/contacts.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group col-md-3">
       <label>Phone Number</label>
-      <input class="form-control" type="tel" name="number" />
+      <input class="form-control" type="tel" name="number" placeholder="123456789 format" />
     </div>
   </div>
   <div class="row">
@@ -30,8 +30,9 @@
   <div class="form-group">
     <button class="btn btn-outline-primary mb-2">Add Contact</button>
   </div>
-
 </form>
+
+
 
 <ul class="list-group">
   {% for contact in contacts %}
