--- a/views/contacts.html
+++ b/views/contacts.html
@@ -32,6 +32,10 @@
   </div>
 </form>
 
+<a href="/randomize">
+  <button style="margin-bottom:20px" class="btn btn-outline-secondary">Create random contact</button>
+</a>
+
 
 
 <ul class="list-group">
