--- a/views/contacts.html
+++ b/views/contacts.html
@@ -33,7 +33,7 @@
 </form>
 
 <a href="/randomize">
-  <button style="margin-bottom:20px" class="btn btn-outline-secondary">Create random contact</button>
+  <button style="margin-bottom:20px" class="btn btn-outline-info">Create random contact</button>
 </a>
 
 <ul class="list-group">
